--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  auto_route: ^9.3.0+1
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
+  auto_route_generator: ^9.3.0+1
+  build_runner: # dart run build_runner watch
   flutter_test:
     sdk: flutter
 
